tests/machine/x/kotlin/two-sum.error
line 22:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/two-sum.kt:22:24: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out Int, ???>.get(key: Int): ??? defined in kotlin.collections
            if (toBool(nums[i] + nums[j] == target)) {
                       ^
/workspace/mochi/tests/machine/x/kotlin/two-sum.kt:22:28: error: no get method providing array access
            if (toBool(nums[i] + nums[j] == target)) {
                           ^
/workspace/mochi/tests/machine/x/kotlin/two-sum.kt:22:34: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out Int, ???>.get(key: Int): ??? defined in kotlin.collections
            if (toBool(nums[i] + nums[j] == target)) {
                                 ^
/workspace/mochi/tests/machine/x/kotlin/two-sum.kt:22:38: error: no get method providing array access
            if (toBool(nums[i] + nums[j] == target)) {
                                     ^
/workspace/mochi/tests/machine/x/kotlin/two-sum.kt:31:13: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out Int, ???>.get(key: Int): ??? defined in kotlin.collections
    println(result[0])
            ^
/workspace/mochi/tests/machine/x/kotlin/two-sum.kt:31:19: error: no get method providing array access
    println(result[0])
                  ^
/workspace/mochi/tests/machine/x/kotlin/two-sum.kt:32:13: error: unresolved reference. None of the following candidates is applicable because of receiver type mismatch: 
@InlineOnly public inline operator fun <@OnlyInputTypes K, V> Map<out Int, ???>.get(key: Int): ??? defined in kotlin.collections
    println(result[1])
            ^
/workspace/mochi/tests/machine/x/kotlin/two-sum.kt:32:19: error: no get method providing array access
    println(result[1])
                  ^

 21:         for (j in i + 1 until n) {
 22:             if (toBool(nums[i] + nums[j] == target)) {
 23:                 return mutableListOf(i, j)
